--- a/META.yml
+++ b/META.yml
@@ -13,7 +13,8 @@ installdirs:              site
 requires:
   perl:                           5.006
   WWW::Mechanize:                 1.60
-  WWW::Scraper::ISBN::Driver:     0.15
+  WWW::Scraper::ISBN:             0.27
+  WWW::Scraper::ISBN::Driver:     0.20
 recommends:
   Test::CPAN::Meta:               0
   Test::CPAN::Meta::JSON:         0
