--- a/META.yml
+++ b/META.yml
@@ -21,8 +21,9 @@ recommends:
   Test::Pod:                      1.00
   Test::Pod::Coverage:            0.08
 build_requires:
-  IO::File:                       0
-  Test::More:                     0.70
+  Data::Dumper:                 0
+  IO::File:                     0
+  Test::More:                   0.70
 
 provides:
   WWW::Scraper::ISBN::ISBNnu_Driver:
